--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>GENEA workshop 2022</title>
+  <title>GENEA Challenge 2022</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">GENEA workshop 2022</span>
+      <span class="d-block d-lg-none">GENEA Challenge 2022</span>
       <!-- <span class="d-none d-lg-block">
         <img src="img/avatar.png" class="img-fluid img-profile rounded-circle mx-auto mb-5" alt="">
 
@@ -64,9 +64,10 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#organising-committee">Organising committee</a>
         </li>
+        <!--
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#program-committee">Program committee</a>
-        </li>
+        </li>-->
 
       </ul>
     </div>
@@ -77,7 +78,7 @@
       <div class="w-100">
         <div class="row">
           <div class="col-md-9 col-sm-12">
-            <h1 class="mb-0">GENEA Workshop 2022
+            <h1 class="mb-2">GENEA Challenge 2022
             </h1>
 
             <div class="subheading mb-5">Generation and Evaluation of Non-verbal Behaviour for Embodied Agents</div>
@@ -85,11 +86,10 @@
 
             <p class="mb-5">
               <b>Official ICMI 2022 Grand Challenge – November 7-11</b><br><br>
-              The GENEA (Generation and Evaluation of Non-verbal Behaviour for Embodied Agents) Workshop and Grand Challenge
+              The GENEA (Generation and Evaluation of Non-verbal Behaviour for Embodied Agents) Grand Challenge
               2022 aims at bringing together researchers that use different methods for non-verbal-behaviour generation
               and evaluation, and hopes to stimulate the discussions on how to improve both the
-              generation methods and
-              the evaluation of the results. We invite all interested researchers to submit a paper related to their
+              generation methods and the evaluation of the results. We invite all interested researchers to submit a paper related to their
               work in the area and to participate in the workshop. This is the third installment of the GENEA Workshop,
               for more information about the 2021 installment, please go <a href="https://genea-workshop.github.io/2021/" target="_blank">here</a>.<br><br>
 
@@ -116,11 +116,45 @@
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="important-dates">
       <div class="w-100">
         <h2 class="mb-5">Important dates</h2>
-        <p>TBD</p>
+
+       <div class="row">
+          <div class="col">May 16, 2022</div>
+          <div class="col">challenge training dataset released to participants</div>
+        </div>
+        <div class="row">
+          <div class="col">June 20, 2022</div>
+          <div class="col">test input release</div>
+        </div>
+        <div class="row">
+          <div class="col">June 27, 2022</div>
+          <div class="col">deadline for participants to submit generated motion, start of evaluation</div>
+        </div>
+        <div class="row">
+          <div class="col">July 11, 2022</div>
+          <div class="col">release of crowdsourced evaluation results to participants</div>
+        </div>
+        <div class="row">
+          <div class="col">July 20, 2022</div>
+          <div class="col">paper submission deadline</div>
+        </div>
+	<div class="row">
+          <div class="col">August 10, 2022</div>
+          <div class="col">paper notification</div>
+        </div>
+        <div class="row">
+          <div class="col">August 17, 2022</div>
+          <div class="col">camera-ready version</div>
+        </div>
+        <div class="row">
+          <div class="col">November 7 - 11, 2022</div>
+          <div class="col">Challenge presentations</div>
+        </div>
+
     </section>
 
     <hr class="m-0">
 
+    <!--
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="workshop-programme">
       <div class="w-100">
         <h2 class="mb-5">Workshop programme</h2>
@@ -166,6 +200,8 @@
 
       </div>
     </section>
+    -->
+
     <!--
     <hr class="m-0">
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="call-for-papers">-->
@@ -307,6 +343,22 @@
         <h4>Workshop organisers</h4>
 
         <div class="row">
+
+
+          <div class="col-sm-12 col-md-6">
+            <div class="row">
+              <div class="col-5">
+                <img src="img/pieter.jpeg" width="100%" class="img-fluid rounded" alt="Pieter Wolfert">
+              </div>
+              <div class="col-7">
+                  <a href="https://www.pieterwolfert.com" target="_blank" style="font-weight: bold;">Pieter Wolfert</a>
+                  <br>
+                  IDLab, Ghent University - imec <br> Belgium
+              </div>
+            </div>
+            <hr>
+          </div>
+
           <div class="col-sm-12 col-md-6">
             <div class="row">
               <div class="col-5">
@@ -321,19 +373,7 @@
             </div>
             <hr>
           </div>
-          <div class="col-sm-12 col-md-6">
-            <div class="row">
-              <div class="col-5">
-                <img src="img/zerrin.jpg" class="img-fluid rounded"  alt="Zerrin Yumak">
-              </div>
-              <div class="col-7">
-                <a href="http://www.zerrinyumak.com" target="_blank" style="font-weight: bold;">Zerrin Yumak</a>
-                <br>
-                Utrecht University <br> The Netherlands
-              </div>
-            </div>
-            <hr>
-          </div>
+          
 
         </div>
 
@@ -354,19 +394,21 @@
             </div>
             <hr>
           </div>
-          <div class="col-sm-12 col-md-6">
+
+         <div class="col-sm-12 col-md-6">
             <div class="row">
               <div class="col-5">
-                <img src="img/pieter.jpeg" width="100%" class="img-fluid rounded" alt="Pieter Wolfert">
+                <img src="img/zerrin.jpg" class="img-fluid rounded"  alt="Zerrin Yumak">
               </div>
               <div class="col-7">
-                  <a href="https://www.pieterwolfert.com" target="_blank" style="font-weight: bold;">Pieter Wolfert</a>
-                  <br>
-                  IDLab, Ghent University - imec <br> Belgium
+                <a href="http://www.zerrinyumak.com" target="_blank" style="font-weight: bold;">Zerrin Yumak</a>
+                <br>
+                Utrecht University <br> The Netherlands
               </div>
             </div>
             <hr>
           </div>
+
         </div>
 
         <div class="row">
@@ -404,16 +446,16 @@
     </section>
     <hr class="m-0">
 
+    <!--
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="program-committee">
-      <!-- justify-content-center -->
       <div class="w-100">
         <h2 class="mb-5">Program committee</h2>
         TBD
       </div>
 
     </section>
-
     <hr class="m-0">
+    --->
 
 
   </div>
