--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
               work in the area and to participate in the workshop. This is the third installment of the GENEA Workshop,
               for more information about the 2021 installment, please go <a href="https://genea-workshop.github.io/2021/" target="_blank">here</a>.<br><br>
 
+              The challenge topic is speech-driven gesture generation. Participants are provided a large, common dataset of speech (audio+aligned text) and 3D motion to develop their systems, and then use these systems to generate motion on given test inputs. The generated motion clips are rendered onto a common virtual agent and evaluated for motion quality and appropriateness in a crowdsourced user study. More details will be available when the dataset is released. Please stay tuned. You can refer to the previous challenge here <a href="https://genea-workshop.github.io/2020/#gesture-generation-challenge" target="_blank">here</a> (be aware that the challenge dataset is different from the previous one).
+
+
             </p>
             <div class="row justify-content-center">
 
@@ -420,7 +423,7 @@
               <div class="col-7">
 
                 <a href="https://sites.google.com/view/youngwoo-yoon/" target="_blank" style="font-weight: bold;">Youngwoo Yoon</a>
-                <br>ETRI & KAIST <br> South Korea
+                <br>ETRI <br> South Korea
 
 
               </div>
