--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <title>GENEA Challenge 2022</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/2022/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
-  <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="/2022/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="/css/iva.min.css" rel="stylesheet">
+  <link href="/2022/css/iva.min.css" rel="stylesheet">
 
 </head>
 
@@ -51,7 +51,7 @@
             </p>
             <div class="row justify-content-center">
 
-              <img src="/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
+              <img src="/2022/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
             </div>
           </div>
           <div class="col-md-3 d-none d-md-block">
@@ -303,7 +303,7 @@
           <div class="col-sm-12 col-md-6">
             <div class="row">
               <div class="col-5">
-                <img src="/img/pieter.jpeg" width="100%" class="img-fluid rounded" alt="Pieter Wolfert">
+                <img src="/2022/img/pieter.jpeg" width="100%" class="img-fluid rounded" alt="Pieter Wolfert">
               </div>
               <div class="col-7">
                   <a href="https://www.pieterwolfert.com" target="_blank" style="font-weight: bold;">Pieter Wolfert</a>
@@ -317,7 +317,7 @@
           <div class="col-sm-12 col-md-6">
             <div class="row">
               <div class="col-5">
-                <img src="/img/taras.jpg" class="img-fluid rounded" alt="Taras Kucherenko">
+                <img src="/2022/img/taras.jpg" class="img-fluid rounded" alt="Taras Kucherenko">
               </div>
               <div class="col-7">
                 <a href="https://svito-zar.github.io/" target="_blank" style="font-weight: bold;">Taras Kucherenko</a>
@@ -336,7 +336,7 @@
           <div class="col-sm-12 col-md-6">
             <div class="row">
               <div class="col-5">
-                <img src="/img/gustav.jpeg" class="img-fluid rounded" alt="Gustav Eje Henter">
+                <img src="/2022/img/gustav.jpeg" class="img-fluid rounded" alt="Gustav Eje Henter">
               </div>
               <div class="col-7">
 
@@ -353,7 +353,7 @@
          <div class="col-sm-12 col-md-6">
             <div class="row">
               <div class="col-5">
-                <img src="/img/zerrin.jpg" class="img-fluid rounded"  alt="Zerrin Yumak">
+                <img src="/2022/img/zerrin.jpg" class="img-fluid rounded"  alt="Zerrin Yumak">
               </div>
               <div class="col-7">
                 <a href="http://www.zerrinyumak.com" target="_blank" style="font-weight: bold;">Zerrin Yumak</a>
@@ -370,7 +370,7 @@
           <div class="col-sm-12 col-md-6">
             <div class="row">
               <div class="col-5">
-                <img src="/img/youngwoo.jpg" class="img-fluid rounded" alt="Youngwoo Yoon">
+                <img src="/2022/img/youngwoo.jpg" class="img-fluid rounded" alt="Youngwoo Yoon">
               </div>
               <div class="col-7">
 
@@ -385,7 +385,7 @@
           <div class="col-sm-12 col-md-6">
             <div class="row">
               <div class="col-5">
-                <img src="/img/carla.jpg" class="img-fluid rounded" alt="Carla Viegas">
+                <img src="/2022/img/carla.jpg" class="img-fluid rounded" alt="Carla Viegas">
               </div>
               <div class="col-7">
                   <a href="https://www.carlaviegas.info" target="_blank" style="font-weight: bold;">Carla Viegas</a>
@@ -416,14 +416,14 @@
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="/vendor/jquery/jquery.min.js"></script>
-  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/2022/vendor/jquery/jquery.min.js"></script>
+  <script src="/2022/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="/2022/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="/js/iva.min.js"></script>
+  <script src="/2022/js/iva.min.js"></script>
 
 </body>
 
