--- a/workshop/index.html
+++ b/workshop/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>GENEA Challenge 2022</title>
+  <title>GENEA Workshop 2022</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/2022/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,76 +23,29 @@
 </head>
 
 <body id="page-top">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">GENEA Challenge 2022</span>
-      <!-- <span class="d-none d-lg-block">
-        <img src="img/avatar.png" class="img-fluid img-profile rounded-circle mx-auto mb-5" alt="">
 
-      </span> -->
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#important-dates">Important dates</a>
-        </li>
-        <!--
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#workshop-programme">Workshop programme</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#call-for-papers">Call for papers</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#reproducibility-award">Reproducibility Award</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#invited-speakers">Invited speakers</a>
-        </li>-->
-        <!--
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#accepted-papers">Accepted papers</a>
-        </li>-->
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#organising-committee">Organising committee</a>
-        </li>
-        <!--
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#program-committee">Program committee</a>
-        </li>-->
-
-      </ul>
-    </div>
-  </nav>
 
   <div class="container-fluid p-0">
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="home">
       <div class="w-100">
         <div class="row">
           <div class="col-md-9 col-sm-12">
-            <h1 class="mb-2">GENEA Challenge 2022
+            <h1 class="mb-2">GENEA Workshop 2022
             </h1>
 
             <div class="subheading mb-5">Generation and Evaluation of Non-verbal Behaviour for Embodied Agents</div>
             <!--  -->
 
             <p class="mb-5">
-              <b>Official ICMI 2022 Grand Challenge – November 7-11</b><br><br>
-              The GENEA (Generation and Evaluation of Non-verbal Behaviour for Embodied Agents) Grand Challenge
+              <b>Official ICMI 2022 Workshop – November 7-11</b><br><br>
+              
+
+              The GENEA (Generation and Evaluation of Non-verbal Behaviour for Embodied Agents) Workshop
               2022 aims at bringing together researchers that use different methods for non-verbal-behaviour generation
               and evaluation, and hopes to stimulate the discussions on how to improve both the
-              generation methods and the evaluation of the results. This is the second installment of the GENEA Challenge,
-              for more information about the 2020 installment, please go <a href="https://genea-workshop.github.io/2020/#gesture-generation-challenge" target="_blank">here</a>.<br><br>
-
-              The challenge topic is speech-driven gesture generation. Participants are provided a large, common dataset of speech (audio+aligned text) and 3D motion to develop their systems, and then use these systems to generate motion on given test inputs. The generated motion clips are rendered onto a common virtual agent and evaluated for motion quality and appropriateness in a crowdsourced user study. More details will be available when the dataset is released. Please stay tuned. You can refer to the previous challenge here <a href="https://genea-workshop.github.io/2020/#gesture-generation-challenge" target="_blank">here</a> (be aware that the challenge dataset is different from the previous one).
+              generation methods and the evaluation of the results. We invite all interested researchers to submit a paper related to their
+              work in the area and to participate in the workshop. This is the third installment of the GENEA Workshop,
+              for more information about the 2021 installment, please go <a href="https://genea-workshop.github.io/2021/" target="_blank">here</a>.<br><br>
 
 
             </p>
@@ -120,36 +73,20 @@
         <h2 class="mb-5">Important dates</h2>
 
        <div class="row">
-          <div class="col">May 16, 2022</div>
-          <div class="col">challenge training dataset released to participants</div>
-        </div>
-        <div class="row">
-          <div class="col">June 20, 2022</div>
-          <div class="col">test input release</div>
-        </div>
-        <div class="row">
-          <div class="col">June 27, 2022</div>
-          <div class="col">deadline for participants to submit generated motion, start of evaluation</div>
-        </div>
-        <div class="row">
-          <div class="col">July 11, 2022</div>
-          <div class="col">release of crowdsourced evaluation results to participants</div>
-        </div>
-        <div class="row">
           <div class="col">July 20, 2022</div>
-          <div class="col">paper submission deadline</div>
+          <div class="col">Submission deadline</div>
         </div>
-	<div class="row">
+        <div class="row">
           <div class="col">August 10, 2022</div>
-          <div class="col">paper notification</div>
+          <div class="col">Notifications</div>
         </div>
         <div class="row">
           <div class="col">August 17, 2022</div>
-          <div class="col">camera-ready version</div>
+          <div class="col">Camera-ready deadline</div>
         </div>
         <div class="row">
           <div class="col">November 7 - 11, 2022</div>
-          <div class="col">Challenge presentations</div>
+          <div class="col">Workshop</div>
         </div>
 
     </section>
