--- a/workshop/index.html
+++ b/workshop/index.html
@@ -24,6 +24,56 @@
 
 <body id="page-top">
 
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">GENEA Challenge 2022</span>
+      <!-- <span class="d-none d-lg-block">
+        <img src="img/avatar.png" class="img-fluid img-profile rounded-circle mx-auto mb-5" alt="">
+
+      </span> -->
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#important-dates">Important dates</a>
+        </li>
+        <!--
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#workshop-programme">Workshop programme</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#call-for-papers">Call for papers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#reproducibility-award">Reproducibility Award</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#invited-speakers">Invited speakers</a>
+        </li>-->
+        <!--
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#accepted-papers">Accepted papers</a>
+        </li>-->
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#organising-committee">Organising committee</a>
+        </li>
+        <!--
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#program-committee">Program committee</a>
+        </li>-->
+
+      </ul>
+    </div>
+  </nav>
+
 
   <div class="container-fluid p-0">
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="home">
