Make main point

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <!--  -->
 
             <p class="mb-5">
-              <h2 class="mb-5">Important dates</h2>
-              <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:1.2em'>Challenge</a>
+
+              <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:5.2em'>Challenge</a>
               
-	      <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:1.2em'>Challenge</a>
+	      <a href="https://genea-workshop.github.io/2022/workshop" target="_blank" style='font-size:5.2em'>Workshop</a>
 
             </p>
             <div class="row justify-content-center">
