--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
             <p class="mb-5">
 
-              <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:5.2em'>Challenge</a>
-              <b>            </b> <br>
-	      <a href="https://genea-workshop.github.io/2022/workshop" target="_blank" style='font-size:5.2em'>Workshop</a>
+              <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:5.2em' style="text-align:center">Challenge</a>
+              <br>
+	      <a href="https://genea-workshop.github.io/2022/workshop" target="_blank" style='font-size:5.2em' style="text-align:center">Workshop</a>
 
             </p>
             <div class="row justify-content-center">
