--- a/challenge/index.html
+++ b/challenge/index.html
@@ -120,6 +120,11 @@
         <h2 class="mb-5">Important dates</h2>
 
        <div class="row">
+          <div class="col">April 8, 2022</div>
+          <div class="col">Participant registration opens</div>
+       </div>
+       
+       <div class="row">
           <div class="col">May 16, 2022</div>
           <div class="col">challenge training dataset released to participants</div>
         </div>
