Iterate on the landing page

--- a/index.html
+++ b/index.html
@@ -38,11 +38,37 @@
 
             <p class="mb-5">
 
-              <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:5.2em' style="text-align:center">Challenge</a>
-              <br>
-	      <a href="https://genea-workshop.github.io/2022/workshop" target="_blank" style='font-size:5.2em' style="text-align:center">Workshop</a>
+	    <div class="col-sm-12 col-md-6">
+		    <div class="row">
+		      <div class="col-5">
+		        <img src="/2022/img/challenge.jpg" class="img-fluid rounded" alt="Challenge">
+		      </div>
+		      <div class="col-7">
+		          <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:5.2em'>Challenge</a>
+		          <br>
+		          Speech-driven gesture generation challenge
+		      </div>
+		    </div>
+		    <hr>
+              </div>
+
+              <div class="col-sm-12 col-md-6">
+		    <div class="row">
+		      <div class="col-5">
+		        <img src="/2022/img/workshop.jpg" class="img-fluid rounded" alt="Workshop">
+		      </div>
+		      <div class="col-7">
+		          <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:5.2em'>Workshop</a>
+		          <br>
+		          Speech-driven gesture generation challenge
+		      </div>
+		    </div>
+		    <hr>
+              </div>
 
             </p>
+
+
             <div class="row justify-content-center">
 
               <img src="/2022/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
