--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <title>GENEA Challenge 2022</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="/2022/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
-  <link href="/2022/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="/2022/css/iva.min.css" rel="stylesheet">
+  <link href="/css/iva.min.css" rel="stylesheet">
 
 </head>
 
@@ -41,7 +41,7 @@
 	    <div class="col-sm-12 col-md-6">
 		    <div class="row">
 		      <div class="col-5">
-		        <img src="/2022/img/challenge.jpg" class="img-fluid rounded" alt="Challenge">
+		        <img src="/img/challenge.png" class="img-fluid rounded" alt="Challenge" width="400" height="400">
 		      </div>
 		      <div class="col-7">
 		          <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:5.2em'>Challenge</a>
@@ -55,12 +55,12 @@
               <div class="col-sm-12 col-md-6">
 		    <div class="row">
 		      <div class="col-5">
-		        <img src="/2022/img/workshop.jpg" class="img-fluid rounded" alt="Workshop">
+		        <img src="/img/workshop.png" class="img-fluid rounded" alt="Workshop" width="400" height="400">
 		      </div>
 		      <div class="col-7">
 		          <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:5.2em'>Workshop</a>
 		          <br>
-		          Speech-driven gesture generation challenge
+		          Official GENEA Workshop at ICMI 2022
 		      </div>
 		    </div>
 		    <hr>
@@ -71,7 +71,7 @@
 
             <div class="row justify-content-center">
 
-              <img src="/2022/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
+              <img src="/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
             </div>
           </div>
           <div class="col-md-3 d-none d-md-block">
@@ -93,14 +93,14 @@
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="/2022/vendor/jquery/jquery.min.js"></script>
-  <script src="/2022/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/vendor/jquery/jquery.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="/2022/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="/2022/js/iva.min.js"></script>
+  <script src="/js/iva.min.js"></script>
 
 </body>
 
