--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 	    <div class="col-sm-12 col-md-6">
 		    <div class="row">
 		      <div class="col-5">
-		        <img src="/img/challenge.png" class="img-fluid rounded" alt="Challenge" width="400" height="400">
+		        <img src="/2022/img/challenge.png" class="img-fluid rounded" alt="Challenge" width="400" height="400">
 		      </div>
 		      <div class="col-7">
-		          <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:5.2em'>Challenge</a>
+		          <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:4.2em'>Challenge</a>
 		          <br>
 		          Speech-driven gesture generation challenge
 		      </div>
@@ -55,10 +55,10 @@
               <div class="col-sm-12 col-md-6">
 		    <div class="row">
 		      <div class="col-5">
-		        <img src="/img/workshop.png" class="img-fluid rounded" alt="Workshop" width="400" height="400">
+		        <img src="/2022/img/workshop.png" class="img-fluid rounded" alt="Workshop" width="400" height="400">
 		      </div>
 		      <div class="col-7">
-		          <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:5.2em'>Workshop</a>
+		          <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:4.2em'>Workshop</a>
 		          <br>
 		          Official GENEA Workshop at ICMI 2022
 		      </div>
