Update challenge page

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -92,8 +92,7 @@
               generation methods and the evaluation of the results. This is the second installment of the GENEA Challenge,
               for more information about the 2020 installment, please go <a href="https://genea-workshop.github.io/2020/#gesture-generation-challenge" target="_blank">here</a>.<br><br>
 
-              The challenge topic is speech-driven gesture generation. Participants are provided a large, common dataset of speech (audio+aligned text) and 3D motion to develop their systems, and then use these systems to generate motion on given test inputs. The generated motion clips are rendered onto a common virtual agent and evaluated for motion quality and appropriateness in a crowdsourced user study. More details will be available when the dataset is released. Please stay tuned. You can refer to the previous challenge here <a href="https://genea-workshop.github.io/2020/#gesture-generation-challenge" target="_blank">here</a> (be aware that the challenge dataset is different from the previous one).
-
+              The challenge topic is speech-driven gesture generation. Participants are provided a large, common dataset of speech (audio+aligned text) and 3D motion to develop their systems, and then use these systems to generate motion on given test inputs. The generated motion clips are rendered onto a common virtual agent and evaluated for motion quality and appropriateness in a crowdsourced user study. More details will be made available when registration opens and when the dataset is released. In the meantime, you can read about the previous challenge here <a href="https://genea-workshop.github.io/2020/#gesture-generation-challenge" target="_blank">here</a> (but be aware that the 2022 dataset is different from the previous one).
 
             </p>
             <div class="row justify-content-center">
