--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		        <img src="/2022/img/workshop.png" class="img-fluid rounded" alt="Workshop" width="400" height="400">
 		      </div>
 		      <div class="col-7">
-		          <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:4.2em'>Workshop</a>
+		          <a href="https://genea-workshop.github.io/2022/workshop" target="_blank" style='font-size:4.2em'>Workshop</a>
 		          <br>
 		          Official GENEA Workshop at ICMI 2022
 		      </div>
@@ -71,8 +71,9 @@
 
             <div class="row justify-content-center">
 
-              <img src="/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
+              <img src="/2022/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
             </div>
+
           </div>
           <div class="col-md-3 d-none d-md-block">
             <a class="twitter-timeline" data-tweet-limit=3 href="https://twitter.com/WorkshopGenea?ref_src=twsrc%5Etfw" target="_blank">Follow us on twitter <i class="fab fa-twitter"></i></a>
