--- a/index.html
+++ b/index.html
@@ -69,10 +69,18 @@
             </p>
 
 
-            <div class="row justify-content-center">
+            <div class="row img-fluid rounded">
 
               <img src="/2022/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
             </div>
+
+	    Links to previous years:
+            <a href="https://genea-workshop.github.io/2021/" target="_blank" style='font-size:2.2em'>2nd GENEA Workshop website</a> (at ICMI 2021)
+	    
+            <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank" style='font-size:2.2em'>Results of the GENEA Challenge 2021</a>
+
+	    <a href="https://genea-workshop.github.io/2020/" target="_blank" style='font-size:2.2em'>1st GENEA Workshop and Challenge website (at IVA 2021)</a>
+
 
           </div>
           <div class="col-md-3 d-none d-md-block">
