--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
 		    <hr>
               </div>
 
+              <div class="col-sm-12 col-md-6">
+		    <div class="row">
+		      <div class="col-5">
+		        <img src="/2022/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
+		      </div>
+		      <div class="col-7">
+
+                          <h2> Links to previous years: </h2>
+                          <br>
+		          <a href="https://genea-workshop.github.io/2021/" target="_blank" style='font-size:2.2em'>2nd GENEA Workshop website (at ICMI 2021)</a>
+		          <br>
+		          <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank" style='font-size:2.2em'>Results of the GENEA Challenge 2021</a>
+			  <br>
+		          <a href="https://genea-workshop.github.io/2020/" target="_blank" style='font-size:2.2em'>1st GENEA Workshop and Challenge website (at IVA 2021)</a>
+
+		      </div>
+		    </div>
+		    <hr>
+              </div>
+
             </p>
 
 
@@ -74,13 +94,7 @@
               <img src="/2022/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
             </div>
 
-	    Links to previous years:
-            <a href="https://genea-workshop.github.io/2021/" target="_blank" style='font-size:2.2em'>2nd GENEA Workshop website</a> (at ICMI 2021)
 	    
-            <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank" style='font-size:2.2em'>Results of the GENEA Challenge 2021</a>
-
-	    <a href="https://genea-workshop.github.io/2020/" target="_blank" style='font-size:2.2em'>1st GENEA Workshop and Challenge website (at IVA 2021)</a>
-
 
           </div>
           <div class="col-md-3 d-none d-md-block">
