--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
 	    <div class="col-sm-12 col-md-12">
 		    <div class="row">
-		      <div class="col-5">
+		      <div class="col-4">
 		        <img src="/2022/img/challenge.png" class="img-fluid rounded" alt="Challenge" width="400" height="400">
 		      </div>
-		      <div class="col-7">
+		      <div class="col-8">
 		          <a href="https://genea-workshop.github.io/2022/challenge" target="_blank" style='font-size:4.2em'>Challenge</a>
 		          <br>
 		          Speech-driven gesture generation challenge
@@ -54,10 +54,10 @@
 
               <div class="col-sm-12 col-md-12">
 		    <div class="row">
-		      <div class="col-5">
+		      <div class="col-4">
 		        <img src="/2022/img/workshop.png" class="img-fluid rounded" alt="Workshop" width="400" height="400">
 		      </div>
-		      <div class="col-7">
+		      <div class="col-8">
 		          <a href="https://genea-workshop.github.io/2022/workshop" target="_blank" style='font-size:4.2em'>Workshop</a>
 		          <br>
 		          Official GENEA Workshop at ICMI 2022
@@ -68,19 +68,22 @@
 
               <div class="col-sm-12 col-md-12">
 		    <div class="row">
-		      <div class="col-5">
+		      <div class="col-4">
 		        <img src="/2022/img/avatar.png"  class="img-fluid rounded" class="mt-2" width=300 alt="">
 		      </div>
-		      <div class="col-7">
+		      <div class="col-8">
 
                           <h2> Links to previous years: </h2>
                           <br>
-		          <a href="https://genea-workshop.github.io/2021/" target="_blank" style='font-size:2.2em'>2nd GENEA Workshop website (at ICMI 2021)</a>
-		          <br>
-		          <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank" style='font-size:2.2em'>Results of the GENEA Challenge 2021</a>
-			  <br>
-		          <a href="https://genea-workshop.github.io/2020/" target="_blank" style='font-size:2.2em'>1st GENEA Workshop and Challenge website (at IVA 2021)</a>
 
+                          <ul>
+			  <li> <a href="https://genea-workshop.github.io/2021/" target="_blank" style='font-size:2.2em'>2nd GENEA Workshop website (at ICMI 2021)</a></li>
+			  <li> <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank" style='font-size:2.2em'>Results of the GENEA Challenge 2021</a></li>
+			  <li> <a href="https://genea-workshop.github.io/2020/" target="_blank" style='font-size:2.2em'>1st GENEA Workshop and Challenge website (at IVA 2021)</a>
+</li>
+			  </ul>
+		         
+		          
 		      </div>
 		    </div>
 		    <hr>
