--- a/challenge/index.html
+++ b/challenge/index.html
@@ -85,14 +85,15 @@
             <!--  -->
 
             <p class="mb-5">
-              <b>Official ICMI 2022 Grand Challenge – November 7-11</b><br><br>
-              The GENEA (Generation and Evaluation of Non-verbal Behaviour for Embodied Agents) Grand Challenge
-              2022 aims at bringing together researchers that use different methods for non-verbal-behaviour generation
-              and evaluation, and hopes to stimulate the discussions on how to improve both the
-              generation methods and the evaluation of the results. This is the second installment of the GENEA Challenge,
-              for more information about the 2020 installment, please go <a href="https://genea-workshop.github.io/2020/#gesture-generation-challenge" target="_blank">here</a>.<br><br>
+              <b>Official <a href="https://icmi.acm.org/2022/grand-challenges/" target="_blank">ICMI 2022 Grand Challenge</a> – Start date May 16 (but register now!)</b><br><br>
 
-              The challenge topic is speech-driven gesture generation. Participants are provided a large, common dataset of speech (audio+aligned text) and 3D motion to develop their systems, and then use these systems to generate motion on given test inputs. The generated motion clips are rendered onto a common virtual agent and evaluated for motion quality and appropriateness in a crowdsourced user study. More details will be made available when registration opens and when the dataset is released. In the meantime, you can read about the previous challenge <a href="https://genea-workshop.github.io/2020/#gesture-generation-challenge" target="_blank">here</a> (but be aware that the 2022 dataset is different from the previous one).
+              The GENEA Challenge 2022 on speech-driven gesture generation aims to bring together researchers that use different methods for non-verbal-behaviour generation and evaluation, and hopes to stimulate the discussions on how to improve both the generation methods and the evaluation of the results.
+
+              The results of the challenge will be presented at <a href="https://genea-workshop.github.io/2022/workshop/" target="_blank">the 3rd GENEA workshop </a> at <a href="https://icmi.acm.org/2022/" target="_blank">ACM ICMI 2022 </a>, with accepted challenge papers published in the main ICMI proceedings.
+
+This is the second instalment of the GENEA Challenge. You can read more about the previous GENEA Challenge here.
+
+              This is the second installment of the GENEA Challenge. You can <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank">read more about the previous GENEA Challenge here </a>.<br><br>
 
             </p>
             <div class="row justify-content-center">
