--- a/challenge/index.html
+++ b/challenge/index.html
@@ -87,9 +87,9 @@
             <p class="mb-5">
               <b>Official <a href="https://icmi.acm.org/2022/grand-challenges/" target="_blank">ICMI 2022 Grand Challenge</a> – Start date May 16 (but register now!)</b><br><br>
 
-              <b>The GENEA Challenge 2022 on speech-driven gesture generation aims to bring together researchers that use different methods for non-verbal-behaviour generation and evaluation, and hopes to stimulate the discussions on how to improve both the generation methods and the evaluation of the results.</b><br>
+              The <b>GENEA Challenge 2022 on speech-driven gesture generation</b> aims to bring together researchers that use different methods for non-verbal-behaviour generation and evaluation, and hopes to stimulate the discussions on how to improve both the generation methods and the evaluation of the results.<br><br>
 
-              <b>The results of the challenge will be presented at <a href="https://genea-workshop.github.io/2022/workshop/" target="_blank">the 3rd GENEA workshop </a> at <a href="https://icmi.acm.org/2022/" target="_blank">ACM ICMI 2022 </a>, with accepted challenge papers published in the main ICMI proceedings.</b><br>
+              The results of the challenge will be presented at <a href="https://genea-workshop.github.io/2022/workshop/" target="_blank">the 3rd GENEA workshop </a> at <a href="https://icmi.acm.org/2022/" target="_blank">ACM ICMI 2022 </a>, with accepted challenge papers published in the main ICMI proceedings.<br><br>
 
               This is the second installment of the GENEA Challenge. You can <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank">read more about the previous GENEA Challenge here </a>.<br><br>
 
