Add Call for Participation

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -112,6 +112,32 @@
     </section>
 
     <hr class="m-0">
+    <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="call-for-papers">-->
+      <!-- justify-content-center -->
+      <div class="w-100">
+        <h2 class="mb-5">Call for participation</h2>
+
+        <div class="iva-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="iva-content">
+            
+            The state of the art in co-speech gesture generation is difficult to assess since every research group tends to use its own data, embodiment, and evaluation methodology. To better understand and compare methods for gesture generation and evaluation, we are continuing the GENEA (Generation and Evaluation of Non-verbal Behaviour for Embodied Agents) Challenge, wherein different gesture-generation approaches are evaluated side by side in a large user study. This 2022 challenge is a Multimodal Grand Challenge for ICMI 2022 and is a follow-up to the first edition of the GENEA Challenge, arranged in 2020.<br>
+            <br>
+
+
+	    We invite researchers in academia and industry working on any form of corpus-based generation of gesticulation and non-verbal behaviour to submit entries to the challenge, whether their method is driven by rule or machine learning. Participants are provided a large, common dataset of speech (audio+aligned text transcriptions) and 3D motion to develop their systems, and then use these systems to generate motion on given test inputs. The generated motion clips are rendered onto a common virtual agent and evaluated for aspects such as motion quality and appropriateness in a large-scale crowdsourced user study. <br>
+            <br>
+ 
+
+            The results of the challenge are presented in hybrid format at the 3rd GENEA Workshop at ICMI 2022, together with individual papers describing each participating system. All accepted challenge papers will be published in the main ACM ICMI 2022 proceedings. <br>
+            <br>
+
+            
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <hr class="m-0">
 
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="important-dates">
       <div class="w-100">
