--- a/challenge/index.html
+++ b/challenge/index.html
@@ -43,13 +43,14 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#important-dates">Important dates</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#call-for-participation">Call for participation</a>
+        </li>
         <!--
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#workshop-programme">Workshop programme</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#call-for-papers">Call for papers</a>
-        </li>
+        
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#reproducibility-award">Reproducibility Award</a>
         </li>
@@ -112,7 +113,7 @@
     </section>
 
     <hr class="m-0">
-    <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="call-for-papers">-->
+    <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="call-for-participation">-->
       <!-- justify-content-center -->
       <div class="w-100">
         <h2 class="mb-5">Call for participation</h2>
@@ -144,41 +145,48 @@
         <h2 class="mb-5">Important dates</h2>
 
        <div class="row">
-          <div class="col">April 8, 2022</div>
-          <div class="col">Participant registration opens</div>
+          <div class="col">April 4, 2022</div>
+          <div class="col">Registration opens</div>
        </div>
+
+        <div class="row">
+          <div class="col">May 9, 2022</div>
+          <div class="col"><b>Deadline to register</b> for the challenge</div>
+        </div>
        
-       <div class="row">
+        <div class="row">
           <div class="col">May 16, 2022</div>
-          <div class="col">challenge training dataset released to participants</div>
+          <div class="col">Training dataset released to challenge participants</div>
         </div>
         <div class="row">
           <div class="col">June 20, 2022</div>
-          <div class="col">test input release</div>
+          <div class="col">Test inputs released to participants
+</div>
         </div>
         <div class="row">
           <div class="col">June 27, 2022</div>
-          <div class="col">deadline for participants to submit generated motion, start of evaluation</div>
+          <div class="col"><b>Deadline for</b> participants to submit <b>generated motion</b></div>
         </div>
         <div class="row">
           <div class="col">July 11, 2022</div>
-          <div class="col">release of crowdsourced evaluation results to participants</div>
+          <div class="col">Release of crowdsourced evaluation results to participants</div>
         </div>
         <div class="row">
           <div class="col">July 20, 2022</div>
-          <div class="col">paper submission deadline</div>
+          <div class="col"><b>Deadline for</b> participants to submit <b>system-description papers</b>
+</div>
         </div>
 	<div class="row">
           <div class="col">August 10, 2022</div>
-          <div class="col">paper notification</div>
+          <div class="col">Paper notification</div>
         </div>
         <div class="row">
           <div class="col">August 17, 2022</div>
-          <div class="col">camera-ready version</div>
+          <div class="col"><b>Deadline for camera-ready papers</b></div>
         </div>
         <div class="row">
           <div class="col">November 7 - 11, 2022</div>
-          <div class="col">Challenge presentations</div>
+          <div class="col"><b>Challenge presentations at ICMI 2022</b></div>
         </div>
 
     </section>
