--- a/challenge/index.html
+++ b/challenge/index.html
@@ -41,11 +41,12 @@
           <a class="nav-link js-scroll-trigger" href="#home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#important-dates">Important dates</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#call-for-participation">Call for participation</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#important-dates">Important dates</a>
+        </li>
+       
         <!--
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#workshop-programme">Workshop programme</a>
@@ -150,7 +151,7 @@
        </div>
 
         <div class="row">
-          <div class="col">May 9, 2022</div>
+          <div class="col"><b>May 9, 2022</b></div>
           <div class="col"><b>Deadline to register</b> for the challenge</div>
         </div>
        
@@ -164,7 +165,7 @@
 </div>
         </div>
         <div class="row">
-          <div class="col">June 27, 2022</div>
+          <div class="col"><b>June 27, 2022</b></div>
           <div class="col"><b>Deadline for</b> participants to submit <b>generated motion</b></div>
         </div>
         <div class="row">
@@ -172,7 +173,7 @@
           <div class="col">Release of crowdsourced evaluation results to participants</div>
         </div>
         <div class="row">
-          <div class="col">July 20, 2022</div>
+          <div class="col"><b>July 20, 2022</b></div>
           <div class="col"><b>Deadline for</b> participants to submit <b>system-description papers</b>
 </div>
         </div>
@@ -181,11 +182,11 @@
           <div class="col">Paper notification</div>
         </div>
         <div class="row">
-          <div class="col">August 17, 2022</div>
+          <div class="col"><b>August 17, 2022</b></div>
           <div class="col"><b>Deadline for camera-ready papers</b></div>
         </div>
         <div class="row">
-          <div class="col">November 7 - 11, 2022</div>
+          <div class="col"><b>November 7 - 11, 2022</b></div>
           <div class="col"><b>Challenge presentations at ICMI 2022</b></div>
         </div>
 
