--- a/challenge/index.html
+++ b/challenge/index.html
@@ -91,9 +91,9 @@
 
               The <b>GENEA Challenge 2022 on speech-driven gesture generation</b> aims to bring together researchers that use different methods for non-verbal-behaviour generation and evaluation, and hopes to stimulate the discussions on how to improve both the generation methods and the evaluation of the results.<br><br>
 
-              The results of the challenge will be presented at <a href="https://genea-workshop.github.io/2022/workshop/" target="_blank">the 3rd GENEA workshop </a> at <a href="https://icmi.acm.org/2022/" target="_blank">ACM ICMI 2022 </a>, with accepted challenge papers published in the main ICMI proceedings.<br><br>
+              The results of the challenge will be presented at <a href="https://genea-workshop.github.io/2022/workshop/" target="_blank">the 3rd GENEA workshop </a> at <a href="https://icmi.acm.org/2022/" target="_blank">ACM ICMI 2022</a>, with accepted challenge papers published in the main ICMI proceedings.<br><br>
 
-              This is the second installment of the GENEA Challenge. You can <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank">read more about the previous GENEA Challenge here </a>.<br><br>
+              This is the second installment of the GENEA Challenge. You can <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank">read more about the previous GENEA Challenge here</a>.<br><br>
 
             </p>
             <div class="row justify-content-center">
@@ -122,11 +122,9 @@
         <div class="iva-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="iva-content">
             
-            The state of the art in co-speech gesture generation is difficult to assess since every research group tends to use its own data, embodiment, and evaluation methodology. To better understand and compare methods for gesture generation and evaluation, we are continuing the GENEA (Generation and Evaluation of Non-verbal Behaviour for Embodied Agents) Challenge, wherein different gesture-generation approaches are evaluated side by side in a large user study. This 2022 challenge is a Multimodal Grand Challenge for ICMI 2022 and is a follow-up to the first edition of the GENEA Challenge, arranged in 2020.<br>
-            <br>
+            The state of the art in co-speech gesture generation is difficult to assess since every research group tends to use its own data, embodiment, and evaluation methodology. To better understand and compare methods for gesture generation and evaluation, we are continuing the GENEA (Generation and Evaluation of Non-verbal Behaviour for Embodied Agents) Challenge, wherein different gesture-generation approaches are evaluated side by side in a large user study. This 2022 challenge is a Multimodal Grand Challenge for ICMI 2022 and is a follow-up to the first edition of the GENEA Challenge, arranged in 2020.<br><br>
 
-
-	    We invite researchers in academia and industry working on any form of corpus-based generation of gesticulation and non-verbal behaviour to submit entries to the challenge, whether their method is driven by rule or machine learning. Participants are provided a large, common dataset of speech (audio+aligned text transcriptions) and 3D motion to develop their systems, and then use these systems to generate motion on given test inputs. The generated motion clips are rendered onto a common virtual agent and evaluated for aspects such as motion quality and appropriateness in a large-scale crowdsourced user study. <br>
+            We invite researchers in academia and industry working on any form of corpus-based generation of gesticulation and non-verbal behaviour to submit entries to the challenge, whether their method is driven by rule or machine learning. Participants are provided a large, common dataset of speech (audio+aligned text transcriptions) and 3D motion to develop their systems, and then use these systems to generate motion on given test inputs. The generated motion clips are rendered onto a common virtual agent and evaluated for aspects such as motion quality and appropriateness in a large-scale crowdsourced user study. <br>
             <br>
  
 
@@ -186,7 +184,7 @@
           <div class="col"><b>Deadline for camera-ready papers</b></div>
         </div>
         <div class="row">
-          <div class="col"><b>November 7 - 11, 2022</b></div>
+          <div class="col"><b>November 7 or 11, 2022</b></div>
           <div class="col"><b>Challenge presentations at ICMI 2022</b></div>
         </div>
 
