--- a/challenge/index.html
+++ b/challenge/index.html
@@ -215,12 +215,10 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
             <br>
 
 	    Download passwords will be issued after your registration is accepted and you have completed any required licences. Do not share the data or passwords with non-challenge participants.<br>
-            <br>
-
 
             <h3>Materials provided</h3>
 	    All participants who have signed the licence will be given access to the following materials:
- <br>
+            <br>
 
             <ul>
 			  <li> 3D full-body motion-capture clips of a speaking and gesticulating person, in BVH format.</li>
@@ -235,6 +233,19 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
 
 	    The above motion, audio, and transcriptions have been partitioned into an official training set and an official validation set. Please respect this split, and do not train on validation data when developing your system. (You may only train on the validation data when creating your final submission.) The official validation set was created using the same process as the held-out test set for the challenge, and has similar duration and other characteristics. It is therefore your best guide to what the final, held-out test set will look like.<br>
             <br>
+
+            If the full data release to participants is delayed, dummy data files illustrating the folder structure, filenames, and data formats will be made available. This allows participants to set up their data-processing pipelines in advance of the full data release.<br>
+            <br>
+
+            Approximately one week before the deadline to submit generated motion stimuli, participants will also be given access to the corresponding test data. The task of the challenge is to use one’s system to generate convincing gesture motion for this held-out speech, and submit that motion for evaluation. For this reason, we will not provide motion data with the held-out speech. Note that not all of the synthetic motion output submitted to the challenge may be included in the final evaluation. <br>
+
+            If, for some reason, you have or gain access to the held-out motion data, we rely on your honesty in not looking at that material or letting it influence your challenge submission. <br>
+
+	    <h3>Limits on participation</h3>
+	    Each participating team may only submit one system per team for evaluation. Teams can consist of one or more persons, from zero or more academic institutions and/or commercial entities. <br>
+            <br>
+
+	    Participants involved in joint projects or consortia who wish to submit multiple systems (e.g., an individual entry and a joint system) should contact the organisers in advance and receive approval first. We will try to accommodate all reasonable requests, provided the evaluation remains manageable. If the number of participating teams is small (e.g., less than five), the organisers may decide to permit multiple entries per team.<br>
  
             
           </div>
