--- a/challenge/index.html
+++ b/challenge/index.html
@@ -203,7 +203,7 @@
 
 
     <hr class="m-0">
-    <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="call-for-participation">-->
+    <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="call-for-participation">
       <!-- justify-content-center -->
       <div class="w-100">
         <h2 class="mb-5">Call for participation</h2>
