Fixing paragraph issue

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -96,11 +96,11 @@
             <p class="mb-5">
               <b>Official <a href="https://icmi.acm.org/2022/grand-challenges/" target="_blank">ICMI 2022 Grand Challenge</a> – Start date May 16 (but register now!)</b><br><br>
 
-              The <b>GENEA Challenge 2022 on speech-driven gesture generation</b> aims to bring together researchers that use different methods for non-verbal-behaviour generation and evaluation, and hopes to stimulate the discussions on how to improve both the generation methods and the evaluation of the results.<br><br>
+              <p>The <b>GENEA Challenge 2022 on speech-driven gesture generation</b> aims to bring together researchers that use different methods for non-verbal-behaviour generation and evaluation, and hopes to stimulate the discussions on how to improve both the generation methods and the evaluation of the results.</p>
 
-              The results of the challenge will be presented at <a href="https://genea-workshop.github.io/2022/workshop/" target="_blank">the 3rd GENEA workshop </a> at <a href="https://icmi.acm.org/2022/" target="_blank">ACM ICMI 2022</a>, with accepted challenge papers published in the main ICMI proceedings.<br><br>
+              <p>The results of the challenge will be presented at <a href="https://genea-workshop.github.io/2022/workshop/" target="_blank">the 3rd GENEA workshop </a> at <a href="https://icmi.acm.org/2022/" target="_blank">ACM ICMI 2022</a>, with accepted challenge papers published in the main ICMI proceedings.</p>
 
-              This is the second installment of the GENEA Challenge. You can <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank">read more about the previous GENEA Challenge here</a>.<br><br>
+              <p>This is the second installment of the GENEA Challenge. You can <a href="https://svito-zar.github.io/GENEAchallenge2020/" target="_blank">read more about the previous GENEA Challenge here</a>.</p><br>
 
             </p>
             <div class="row justify-content-center">
@@ -185,12 +185,10 @@
             
             Challenge registration is open!<br><br>
 
-            Please make sure to read and agree to <a href="https://genea-workshop.github.io/2022/challenge/#rules" target="_blank">the challenge rules</a> before registering. Do not register for the challenge if you do not intend to comply with these rules. <br>
-            <br>
+            <p>Please make sure to read and agree to <a href="https://genea-workshop.github.io/2022/challenge/#rules" target="_blank">the challenge rules</a> before registering. Do not register for the challenge if you do not intend to comply with these rules. </p>
 
-            Once you have read the rules, please <a href="https://forms.gle/5ho6pnZiFrMeo3yM9" target="_blank">use this sign-up form to register your team</a>.
+            <p>Once you have read the rules, please <a href="https://forms.gle/5ho6pnZiFrMeo3yM9" target="_blank">use this sign-up form to register your team</a>.</p>
 
-            <br>
             <br>
 
             
