Add hybrid to the workshop website

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -170,7 +170,7 @@
         </div>
         <div class="row">
           <div class="col"><b>November 7 or 11, 2022</b></div>
-          <div class="col"><b>Challenge presentations at ICMI 2022</b></div>
+          <div class="col"><b>Challenge presentations at ICMI 2022 (Hybrid)</b></div>
         </div>
 
     </section>
