Add panelbear tracking

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -681,4 +681,11 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
 
 </body>
 
+<!-- Panelbear -->
+<script async src="https://cdn.panelbear.com/analytics.js?site=9bGH0f0hxBy"></script>
+<script>
+    window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
+    panelbear('config', { site: '9bGH0f0hxBy' });
+</script>
+
 </html>
