--- a/workshop/index.html
+++ b/workshop/index.html
@@ -461,4 +461,11 @@
 
 </body>
 
+<!-- Panelbear -->
+<script async src="https://cdn.panelbear.com/analytics.js?site=9bGH0f0hxBy"></script>
+<script>
+    window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
+    panelbear('config', { site: '9bGH0f0hxBy' });
+</script>
+
 </html>
